--- a/index.html
+++ b/index.html
@@ -45,13 +45,8 @@
                     <input type="text" name="user-phone" class="form-control" id="field-2-2" value="" placeholder="Phone" required>
                   </div>
                   <div class="form-group col-md-3">
-                    <div class='input-group date' id='timepicker'>
-                        <label class="sr-only" for="field-2-3">Time</label>
-                        <input type="text" name="user-time" class="form-control" id="field-2-3" value="" placeholder="Time" required>
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-time"></span>
-                        </span>
-                    </div>
+                    <label class="sr-only" for="timepicker">Time</label>
+                    <input type="text" name="user-time" class="form-control" id="timepicker" value="" placeholder="Time" required>
                   </div>
               </div>
               <p class="text-right">
