implement nextCallForm base functionality

--- a/app_angular/index.html
+++ b/app_angular/index.html
@@ -12,12 +12,12 @@
     
     <script src="js/index.js"></script>
     <!--directives-->
+    <script src="js/controllers/main.js"></script>
     <script src="js/directives/nextCall/script.js"></script>
     <script src="js/directives/callList/script.js"></script>
-    <script src="js/directives/itemCall/script.js"></script>
     <script src="js/directives/addCall/script.js"></script>
 </head>
-<body>
+<body ng-controller="mainCtrl">
     <div class="container">
         <div class="row">
             <h1 class="text-center">ToDoCalls angular app</h1>
