--- a/app_angular/js/directives/callList/tpl.html
+++ b/app_angular/js/directives/callList/tpl.html
@@ -10,9 +10,8 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody ng-repeat="item in callList">
-            <!--<item-call></item-call>-->
-            <tr>
+        <tbody>
+            <tr ng-repeat="item in callList">
                 <td>{{item.name}}</td>
                 <td>{{item.phone}}</td>
                 <td>{{item.time}}</td>
