--- a/app_angular/js/directives/addCall/tpl.html
+++ b/app_angular/js/directives/addCall/tpl.html
@@ -1,18 +1,18 @@
 <div class="item add-item">
     <h3 class="text-center">Add call</h3>
-    <form action="/">
+    <form name="addCallForm" data-ng-submit="addCall()">
         <div class="wrapper row">
             <div class="form-group col-md-4">
                 <label class="sr-only" for="field-2-1">Name</label>
-                <input type="text" name="user-name" class="form-control" id="field-2-1" value="" placeholder="Name" required>
+                <input type="text" name="user-name" class="form-control" id="field-2-1" ng-model="name" placeholder="Name" required>
             </div>
             <div class="form-group col-md-5">
                 <label class="sr-only" for="field-2-2">Phone</label>
-                <input type="text" name="user-phone" class="form-control" id="field-2-2" value="" placeholder="Phone" required>
+                <input type="text" name="user-phone" class="form-control" id="field-2-2" ng-model="phone" placeholder="Phone" required>
             </div>
             <div class="form-group col-md-3">
                 <label class="sr-only" for="timepicker">Time</label>
-                <input type="text" name="user-time" class="form-control" id="timepicker" value="" placeholder="Time" required>
+                <input type="text" name="user-time" class="form-control" id="timepicker" ng-model="time" placeholder="Time" required>
             </div>
         </div>
         <p class="text-right">
