--- a/app_angular/js/directives/addCall/tpl.html
+++ b/app_angular/js/directives/addCall/tpl.html
@@ -1,18 +1,31 @@
 <div class="item add-item">
     <h3 class="text-center">Add call</h3>
-    <form name="addCallForm" data-ng-submit="addCall()">
+    <form name="addCallForm" data-ng-submit="addCall()" novalidate>
         <div class="wrapper row">
             <div class="form-group col-md-4">
-                <label class="sr-only" for="field-2-1">Name</label>
-                <input type="text" name="user-name" class="form-control" id="field-2-1" ng-model="name" placeholder="Name" required>
+                <label class="sr-only" for="field-2-1">Name *</label>
+                <input type="text" name="userName" class="form-control" ng-model="name" placeholder="Name" ng-maxlength="nameMaxLength" required>
+                <span class="error-message" ng-show="addCallForm.$submitted || addCallForm.userName.$touched">
+                    <span ng-show="addCallForm.userName.$error.maxlength">Name should not be longer than {{nameMaxLength}}</span>
+                <span ng-show="addCallForm.userName.$error.required">Enter contact name</span>
+                </span>
             </div>
             <div class="form-group col-md-5">
-                <label class="sr-only" for="field-2-2">Phone</label>
-                <input type="text" name="user-phone" class="form-control" id="field-2-2" ng-model="phone" placeholder="Phone" required>
+                <label class="sr-only" for="field-2-2">Phone *</label>
+                <input type="text" name="userPhone" class="form-control" ng-model="phone" placeholder="Phone" ng-pattern="phonePattern"
+                    required>
+                <span class="error-message" ng-show="addCallForm.$submitted || addCallForm.userPhone.$touched">
+                    <span ng-show="addCallForm.userPhone.$error.pattern">Example of correct phone: +(420) 111 222 333</span>
+                    <span ng-show="addCallForm.userPhone.$error.required">Enter phone</span>
+                </span>
             </div>
             <div class="form-group col-md-3">
-                <label class="sr-only" for="timepicker">Time</label>
-                <input type="text" name="user-time" class="form-control" id="timepicker" ng-model="time" placeholder="Time" required>
+                <label class="sr-only" for="timepicker">Time *</label>
+                <input type="text" name="userTime" class="form-control" id="timepicker" ng-model="time" placeholder="Time"  ng-pattern="timePattern" required>
+                <span class="error-message" ng-show="addCallForm.$submitted || addCallForm.userTime.$touched">
+                    <span ng-show="addCallForm.userTime.$error.pattern">Exaple of correct time: 21:45</span>
+                    <span ng-show="addCallForm.userTime.$error.required">Enter time</span>
+                </span>
             </div>
         </div>
         <p class="text-right">
