finish refactoring app according J.Papa style guide

--- a/app_angular/index.html
+++ b/app_angular/index.html
@@ -21,7 +21,7 @@
     <script src="js/directives/addCall/script.js"></script>
 </head>
 
-<body ng-controller="MainController">
+<body ng-controller="MainController as MainCtrl">
     <div class="container">
         <div class="row">
             <h1 class="text-center">ToDoCalls angular app</h1>
