--- a/app_angular/js/directives/callList/tpl.html
+++ b/app_angular/js/directives/callList/tpl.html
@@ -21,7 +21,7 @@
                 <td>{{item.name}}</td>
                 <td>{{item.phone}}</td>
                 <td>{{item.time | date:'HH:mm'}}</td>
-                <td><a href="" ng-click="removeItem(item.time)">delete</a></td>
+                <td><a href="" ng-click="MainCtrl.removeItem(item.time)">delete</a></td>
                 <td><input type="checkbox" name="viwed" ng-checked="timeInPast(item.time)" disabled ></td>
             </tr>
         </tbody>
