--- a/app_angular/index.html
+++ b/app_angular/index.html
@@ -14,7 +14,7 @@
     <script src="node_modules/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
     <script src="node_modules/lodash/lodash.js"></script>
 
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/controllers/main.js"></script>
     <script src="js/directives/nextCall/script.js"></script>
     <script src="js/directives/callList/script.js"></script>
