tune gulfile build task

--- a/app_angular/app/index.html
+++ b/app_angular/app/index.html
@@ -16,12 +16,9 @@
     <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     <script src="../node_modules/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
     <script src="../node_modules/lodash/lodash.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers/main.js"></script>
-    <script src="js/directives/nextCall/script.js"></script>
-    <script src="js/directives/callList/script.js"></script>
-    <script src="js/directives/addCall/script.js"></script>
     <!-- endbuild -->
+
+    <script src="js/app-bundle.js"></script>
 </head>
 
 <body ng-controller="MainController as MainCtrl">
