change dist index file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       Calls list</h1>
 
     <p>Application for creating Todo Calls list. app specification details is on the file <a href="./app_specification.pdf">app_specification.pdf</a>.</p>
-    <p>New angular app can be reached by this <a href="dist/index.html">link</a>.</p>
+    <p>New angular app can be reached by this <a href="app_angular/dist/index.html">link</a>.</p>
 
     <footer class="site-footer">
       <span class="site-footer-owner"><a href="https://github.com/Nakan4u/TODO-list">Todo Calls list</a> is maintained by <a href="https://github.com/Nakan4u">Nakan4u</a>.</span>
